@@ -1,3 +1,3 @@
 {"a": "bcd", "e": [1,
                    2, 3,4,"five", {"six": 7, "8": 9}, null, true,
-                   false]}
+                   false, "a\b\f\n\r\t\\\"\/z"]}
